--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
                 display: block;
                 margin: 0 auto;
             }
-            a:hover {
+            a::hover {
                 color: #89609e;
             }
         </style>
     </head>
     <canvas id="snake" width="608" height="608"></canvas>
-    <h2> Click <a href="https://jssnakegame.netlify.app/" style="color:#cd8de5; text-decoration:none;">here</a> to start over</h2>
+    <h2> Click <a href="https://jssnakegame.netlify.app/" style="color:#cd8de5; text-decoration:none; text-align:center;">here</a> to start over</h2>
     <script src="snake.js"></script>
 </html>
